--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t kacperKwiatkowski/frontend-tweet -f
+  - docker build -t kacperkwiatkowski/frontend-tweet -f Dockerfile .
 
 script:
-  - docker run -e CI=true kacperKwiatkowski/frontend-tweet npm run test
+  - docker run -e CI=true kacperkwiatkowski/frontend-tweet npm run test
