--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,15 @@ before_install:
 
 script:
   - docker run -e CI=true kacperkwiatkowski/frontend-tweet npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: eu-central-1
+  app: tweet-app-ui
+  env: Tweetappui-env
+  bucket_name: elasticbeanstalk-eu-central-1-007555715517
+  bucket_path: tweet-app-ui
+  #  on:
+  #    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
