--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -11,7 +11,7 @@ services:
     container_name: frontend-tweet
     build:
       context: ./
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.local
     ports:
-      - "80:80"
+      - "3000:3000"
     restart: always
