Deployment port fix #2

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,9 @@
 version: '3.9'
 
-networks:
-  shared-net:
-    driver: bridge
-
 services:
-
   frontend-tweet:
-    image: frontend-tweet
-    container_name: frontend-tweet
     build:
-      context: ./
+      context: .
       dockerfile: Dockerfile
     ports:
       - "80:80"
-    restart: always
