--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -1,26 +1,11 @@
-#FROM node:14-alpine AS development
-#ENV NODE_ENV development
-## Add a work directory
-#WORKDIR /app
-## Cache and Install dependencies
-#COPY package.json .
-#
-#RUN npm install
-#RUN npm fund
-#RUN npm audit fix
-## Copy app files
-#COPY . .
-## Expose port
-#EXPOSE 3000
-## Start the app
-#CMD [ "npm", "start" ]
-
 FROM node:16-alpine
 
 WORKDIR '/app'
 
 COPY package.json .
 RUN npm install
+RUN npm fund
+RUN npm audit fix
 
 COPY . .
 
