--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3.9'
 
 services:
   frontend-tweet:
+    image: frontend-tweet
+    container_name: frontend-tweet
     build:
       context: .
       dockerfile: Dockerfile
