--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t kacperkwiatkowski/frontend-tweet -f Dockerfile .
+  - docker build -t kacperkwiatkowski/frontend-tweet -f Dockerfile.local .
 
 script:
   - docker run -e CI=true kacperkwiatkowski/frontend-tweet npm run test
