--- a/.travis.yml
+++ b/.travis.yml
@@ -10,14 +10,7 @@ before_install:
 script:
   - docker run -e CI=true kacperkwiatkowski/frontend-tweet npm run test
 
-deploy:
-  provider: elasticbeanstalk
-  region: eu-central-1
-  app: tweet-app-ui
-  env: Tweetappui-env
-  bucket_name: elasticbeanstalk-eu-central-1-007555715517
-  bucket_path: tweet-app-ui
-  on:
-    branch: master
-  access_key_id: $AWS_ACCESS_KEY
-  secret_access_key: $AWS_SECRET_KEY
+after_success:
+  - docker build -t kacperkwiatkowski/frontend-tweet ./Dockerfile
+  - echo $DOCKER_PASSWORD | docker login -u "$DOCKER_ID" --password-stdin
+  - docker push kacperkwiatkowski/frontend-tweet
