--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,16 +1,12 @@
-upstream backend-tweet-prod {
-    server backend-tweet-prod:8080;
-}
-
-upstream frontend-tweet-prod {
-    server frontend-tweet-prod:3000;
+upstream frontend-tweet {
+    server frontend-tweet:3000;
 }
 
 server {
     listen 80;
 
     location / {
-        proxy_pass http://frontend-tweet-prod;
+        proxy_pass http://frontend-tweet;
         proxy_set_header    Host               $host;
         proxy_set_header    X-Real-IP          $remote_addr;
         proxy_set_header    X-Forwarded-For    $proxy_add_x_forwarded_for;
@@ -19,17 +15,4 @@ server {
         proxy_set_header    X-Forwarded-Port   $server_port;
         proxy_set_header    X-Forwarded-Proto  $scheme;
     }
-
-    location /api/ {
-        proxy_redirect http://localhost http://backend-tweet-prod;
-        proxy_pass  http://backend-tweet-prod;
-        proxy_set_header    Host               $host;
-        proxy_set_header    X-Real-IP          $remote_addr;
-        proxy_set_header    X-Forwarded-For    $proxy_add_x_forwarded_for;
-        proxy_set_header    X-Forwarded-Host   $host;
-        proxy_set_header    X-Forwarded-Server $host;
-        proxy_set_header    X-Forwarded-Port   $server_port;
-        proxy_set_header    X-Forwarded-Proto  $scheme;
-    }
-
 }
