--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,8 @@ after_success:
 deploy:
   provider: elasticbeanstalk
   region: eu-central-1
-  app: tweet-app
-  env: Tweetapp-env
+  app: tweet-app-ui
+  env: Tweetappui-env
   bucket_name: elasticbeanstalk-eu-central-1-195077249767
   bucket_path: tweet-app-bucket
   on:
