--- a/package.json
+++ b/package.json
@@ -6,20 +6,22 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "env-cmd": "^10.1.0",
     "msw": "^0.47.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
-    "sass": "^1.54.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "env-cmd -f ./environments/.prod.env react-scripts start",
+    "build": "env-cmd -f ./environments/.prod.env react-scripts build",
+    "test": "env-cmd -f ./environments/.dev.env react-scripts test",
+    "eject": "env-cmd -f ./environments/.dev.env react-scripts eject",
+    "start:dev": "env-cmd -f ./environments/.dev.env react-scripts start",
+    "build:dev": "env-cmd -f ./environments/.dev.env npm react-scripts build"
   },
   "eslintConfig": {
     "extends": [
@@ -41,6 +43,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^13.4.0",
-    "react-test-renderer": "^18.2.0"
+    "react-test-renderer": "^18.2.0",
+    "sass": "^1.55.0"
   }
 }
